<resources>
    <string name="app_name">Sports4Party</string>

    <string-array name="Deportes">
        <item>Futbol</item>
        <item>Baloncesto</item>
        <item>Volleyball</item>
        <item>Atletismo</item>

    </string-array>
    <string-array name="Habilidad">
        <item>Avanzado</item>
        <item>Intermedio</item>
        <item>Bajo</item>
    </string-array>

    <string name="rutas_yolo">Ir a rutas</string>

    <string name="profile_level">Nivel de habilidad:</string>
    <string name="profile_popularity">Popularidad:</string>
    <string name="profile_friends">Amigos:</string>
    <string name="profile_events">Eventos de</string>
    <string name="profile_new_event">Nuevo evento</string>
    <string name="see">Ver</string>

    <string name="title_activity_mapa">Mapa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sport4Party</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="buscar_evento">Buscar Evento</string>
    <string name="mis_amigos">Mis Amigos</string>
    <string name="mis_eventos">Mis Eventos</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>

    <string name="appName"><font color='#FFFFFF'>Sports</font><font color='#FFBD00'>4</font><font color='#FFFFFF'>Party</font></string>
    <string name="user">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="registry">Registrarse</string>

    <string name="hour">Hora:</string>
    <string name="sport">Deporte:</string>

    <string-array name="hours">
        <item>Cualquiera</item>
        <item>Hoy</item>
        <item>Esta semana</item>
        <item>Mañana</item>
    </string-array>

    <string-array name="sports">
        <item>Futbol</item>
        <item>Baloncesto</item>
        <item>Voleibol</item>
        <item>Tenis</item>
    </string-array>

    <string-array name="sexo">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>

    <string name="event_name">Nombre del evento</string>
    <string name="event_name_hint">Nombre</string>
    <string name="event_description">Descripción del evento</string>
    <string name="event_sport">Deporte</string>
    <string name="event_date">Fecha</string>
    <string name="event_hour">Hora</string>
    <string name="event_capacity">Cupos</string>
    <string name="event_level">Habilidad</string>
    <string name="event_cost">Precio</string>
    <string name="event_create">Nuevo Evento</string>
    <string name="event_myList">Mis Eventos</string>
    <string name="title_activity_maps">Map</string>
    <string name="update">Actualizar</string>
    <string name="camera">Cámara</string>
    <string name="gallery">Galería</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
</resources>
